syntax = "proto3";

package order;
option go_package="github.com/izaakdale/service-event-order/pkg/schema/order";

service OrderService {
    rpc GetOrder(OrderRequest) returns (OrderResponse);
}

message OrderRequest {
    string order_id = 1;
}

message OrderResponse {
    string email = 1;
    repeated Ticket tickets = 2;
}

message Ticket {
    string first_name = 1;
    string surname = 2;
    string qr_path = 3;
    string ticket_type = 4;
}
